<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="价格 ："
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="（单选）"
            android:textColor="@color/text_red"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/radio_group_selector"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/constant_price"
                android:textColor="@color/text_black" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_rect_blue_stroke_corner"
                android:hint="@string/constant_price"
                android:numeric="integer"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/radio_group_selector"
                android:padding="5dp"
                android:text="@string/scope_price"
                android:textColor="@color/text_black" />

            <EditText
                android:id="@+id/et_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_blue_stroke_corner"
                android:numeric="integer"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp_16"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="---"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/sp_16"/>

            <EditText
                android:id="@+id/et_above"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_rect_blue_stroke_corner"
                android:numeric="integer"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@drawable/radio_group_selector"
                android:padding="5dp"
                android:text="@string/discuss_price"
                android:textColor="@color/text_black" />


        </LinearLayout>
    </RadioGroup>

</LinearLayout>